# gdext-utils

./: Cargo.toml
.github/workflows/: ci.yaml
gdext-utils/: Cargo.toml
gdext-utils-demo/: Cargo.toml
gdext-utils-demo/godot/: RustExtension.gdextension  main.tscn  project.godot
gdext-utils-demo/src/: lib.rs  ui_demo_1.rs
gdext-utils/src/: gd_utils.rs  lib.rs
